hphp/hack/test/typecheck/instanceof/instanceof_generic_bad4.php.like_types.exp
File "instanceof_generic_bad4.php", line 9, characters 20-21:
Invalid argument (Typing[4110])
File "instanceof_generic_bad4.php", line 6, characters 25-33:
Expected ~Inv<Base> because it is an unenforceable type
File "instanceof_generic_bad4.php", line 8, characters 13-15:
But got <expr#1>
File "instanceof_generic_bad4.php", line 9, characters 20-21:
  where '<expr#1>' is a reference to this expression
